--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="scss/styles.scss">
 </head>
 <body>
     <div class="container">
@@ -20,6 +20,6 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
 
-    <script src="script.js"></script>
+    <script src="js\script.js"></script>
 </body>
 </html>
