--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
-    <link rel="stylesheet" href="scss/styles.scss">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <div class="container">
@@ -15,11 +15,13 @@
             <h2 id="location"></h2>
             <p id="temperature"></p>
             <p id="description"></p>
+            <!-- Added elements for more detailed forecast -->
+            <p id="humidity"></p>
+            <p id="windSpeed"></p>
+            <p id="feelsLike"></p>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-
-
     <script src="js\script.js"></script>
 </body>
 </html>
