map file is a source map file that maps the minified version of a file to the original file. It is used by developers to debug minified files.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 </head>
 <body>
     <div class="container">
@@ -15,12 +17,16 @@
             <h2 id="location"></h2>
             <p id="temperature"></p>
             <p id="description"></p>
-            <!-- Added elements for more detailed forecast -->
             <p id="humidity"></p>
             <p id="windSpeed"></p>
             <p id="feelsLike"></p>
         </div>
     </div>
+<div class="container">
+    
+    <div id='map' style='width: 600px; height: 400px; margin-right: 20px;'></div>
+    
+</div>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="js\script.js"></script>
 </body>
