--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
 <div class="container">
     
-    <div id='map' style='width: 600px; height: 400px; margin-right: 20px;'></div>
+    <div id='map' style='height: 300px; width: 500px; position: relative; margin: auto; '></div>
     
 </div>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
