--- a/index.html
+++ b/index.html
@@ -3,20 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#121212" />
     <title>Weather App</title>
+    <link rel="manifest" href="manifest.webmanifest">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 </head>
 <body>
+    <main class="page">
     <div class="container">
         <h1>Weather App</h1>
-        <div class="search-container">
-            <input type="text" id="locationInput" placeholder="Enter a city">
-            <button id="searchButton">Search</button>
-            <span id="clearButton" class="clear-button">&times;</span>
+        <div class="search-container" role="search">
+            <div class="input-wrapper">
+                <input type="text" id="locationInput" placeholder="Enter a city" aria-label="City or location" autocomplete="off" list="recentList">
+                <span id="clearButton" class="clear-button" title="Clear input" aria-hidden="true">&times;</span>
+            </div>
+            <datalist id="recentList"></datalist>
+            <div class="toolbar">
+                <button id="searchButton" class="btn primary" aria-label="Search">Search</button>
+                <button id="geolocateButton" class="btn" aria-label="Use my location">Use my location</button>
+                <button id="themeToggle" class="btn" aria-label="Toggle light/dark theme">Theme</button>
+                <label class="unit-toggle switch" title="Toggle units (°C/°F)">
+                    <input type="checkbox" id="unitToggle" aria-label="Toggle °C/°F">
+                    <span class="track" aria-hidden="true">
+                        <span class="thumb"></span>
+                        <span class="labels"><span>°C</span><span>°F</span></span>
+                    </span>
+                </label>
+                <button id="addFavoriteButton" class="btn" aria-label="Add to favorites">Add favorite</button>
+                <button id="shareButton" class="btn" aria-label="Copy share link">Share</button>
+            </div>
+            <div id="status" class="status" aria-live="polite"></div>
+            <div class="favorites">
+                <div class="chips" id="favorites" aria-label="Saved locations"></div>
+            </div>
         </div>
-        <div class="weather-info">
+        <div class="weather-info" aria-live="polite">
             <h2 id="location"></h2>
             <p id="temperature"></p>
             <p id="description"></p>
@@ -24,11 +47,32 @@
             <p id="windSpeed"></p>
             <p id="feelsLike"></p>
         </div>
+        <div class="extras">
+            <div class="time-sun">
+                <h3>Local time & sun</h3>
+                <p id="localTime"></p>
+                <p id="sunrise"></p>
+                <p id="sunset"></p>
+            </div>
+            <div class="aqi">
+                <h3>Air quality</h3>
+                <p id="aqiIndex" class="aqi-badge"></p>
+                <div id="aqiDetails" class="aqi-details"></div>
+            </div>
+        </div>
+        <div id="forecast" class="forecast">
+            <h3>5-day forecast</h3>
+            <div id="forecastGrid" class="forecast-grid" aria-live="polite"></div>
+        </div>
+        <div id="hourly" class="hourly">
+            <h3>Next 24 hours</h3>
+            <div id="hourlyChart" class="hourly-chart" aria-hidden="true"></div>
+        </div>
     </div>
-    <div class="container">
+    <div class="container map-panel">
         <div id='map' style='height: 300px; width: 100%; position: relative; margin: auto;'></div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    </main>
     <script src="js/script.js"></script>
 </body>
 </html>
