--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
                 <p id="aqiIndex" class="aqi-badge"></p>
                 <div id="aqiDetails" class="aqi-details"></div>
             </div>
+            <div class="sports">
+                <h3>Outdoor sports</h3>
+                <p id="sportsScore"></p>
+                <div id="sportsDetails" class="sports-details"></div>
+            </div>
         </div>
         <div id="forecast" class="forecast">
             <h3>5-day forecast</h3>
